# vickynghi

./: .gitignore  runmyplayer.sh
.github/workflows/: vickynghiCI.yaml
cli/: CMakeLists.txt  GameManager.cpp  main.cpp
cli/profiles/: FallbackBlackPlayerProfile.h  ProfileManager.cpp  SimpleBlackPlayerProfile.h  VickynghiBlackPlayerProfile.h  VickynghiBlackPlayerProfileTraining.h  VickynghiWhitePlayerProfile.h  VickynghiWhitePlayerProfileTraining.h
galgo/: genetic_algo.cpp  genetic_algo_black.cpp  genetic_algo_white.cpp
lib/: CMakeLists.txt
lib/evaluator/: BlackEvaluator.cpp  BlackEvaluator.h  VickynghiBlackEvaluator.cpp  VickynghiBlackEvaluator.h  VickynghiBlackEvaluatorTraining.cpp  VickynghiBlackEvaluatorTraining.h  VickynghiWhiteEvaluator.cpp  VickynghiWhiteEvaluator.h  VickynghiWhiteEvaluatorTraining.cpp  VickynghiWhiteEvaluatorTraining.h
lib/model/: Board.cpp  Board.h
lib/movegenerator/: ArnoldMoveGenerator.cpp  HeisenbergMoveGenerator.cpp  MoveGenerator.h
lib/search/: FSMSearchEngine.h  ThanosSearchEngine.h
lib/util/: BitUtils.h
test/: BlackEvaluatorTest.cpp  BoardTest.cpp  CMakeLists.txt
